<resources>
    <string name="app_name">Seller Fee Calculator</string>
    <string name="text1">Select \n Category</string>
    <string name="select_category">Select Category</string>
    <string name="text2">Sale Price</string>
    <string name="text3">Shipping Price</string>
    <string name="text4">Paisapay Fee</string>
    <string name="text5">Total Fee</string>
    <string name="text6">Expected Payout</string>
    <string name="payout">Expected \n Payout</string>
    <string name="text7">Final Value Fee</string>
    <string name="calculateBtnName">Calculate</string>
    <string name="action_settings">Settings</string>
    <string name="defaultValue">0</string>
</resources>
